# foract

./: .gitignore  CONTRIBUTING.md  code_dump.txt  phase0_review.txt  phase1_graph_model.txt  phase3_source_dump.txt  pyproject.toml  schema_code.txt
config/: default.yaml
examples/: schema_validation.py
src/foract/config/: __init__.py  loader.py  settings.py
src/foract/enums/: __init__.py  artifact.py  plugin.py  schema.py
src/foract/exceptions/: __init__.py  base.py  execution.py  graph.py
src/foract/execution/: __init__.py  execution_memory.py  execution_record.py  execution_status.py
src/foract/graph/: __init__.py  enums.py
src/foract/integration/: deduplicator.py  engine.py  graph_persistence_service.py  identity_index.py  mapper.py  models.py  node_merger.py  normalizer.py  parser.py  parser_registry.py  provenance.py  relationship_builder.py  report.py  resolver.py  validator.py
src/foract/log/: __init__.py  logger.py
src/foract/models/: __init__.py  execution_record.py  execution_report.py  operational_artifact.py  plugin.py  result.py  verification_report.py
src/foract/registry/: __init__.py  base.py  plugin.py  schema.py
src/foract/schema/: __init__.py  bootstrap.py  builtin.py  definition.py  field.py  registry.py  relationship.py  relationship_mapping.py  validator.py
src/foract/storage/: __init__.py  blob_store.py  (+1 more)
tests/: test_builtin_schemas.py  test_config.py  test_evidence_graph_integration.py  test_exceptions.py  test_field.py  test_graph_model_edges.py  test_graph_model_hypothesis.py  test_graph_model_nodes.py  test_graph_query_engine.py  test_graph_store_interface.py  test_logging.py  test_memory_graph_store.py  test_models.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_registry.py  test_schema_validation.py
tests/execution/: test_blob_store.py  test_execution_memory.py  test_execution_record.py
tests/integration/: test_phase3.py
(+18 files in other folders)
